@@ -105,7 +105,7 @@
 #error "eek! DBVER can't handle minor versions > 9"
 #endif
 
-#define PY_BSDDB_VERSION "4.6.2devel4"
+#define PY_BSDDB_VERSION "4.6.2devel5"
 
 /* Python object definitions */
 
